// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`$setData Data with array 1`] = `
Object {
  "user.cars.0.brand": "Volvo",
  "user.cars.0.modal": 2920,
  "user.cars.1.brand": "Saab",
  "user.cars.1.modal": 2017,
  "user.cars.2": null,
  "user.cars.4.brand": "Honda",
  "user.cars.4.modal": 2019,
  "user.name": "John",
}
`;

exports[`$setData Data with array, overwrite 1`] = `
Object {
  "user.cars": Array [
    Object {
      "brand": "Volvo",
      "modal": 2920,
    },
    Object {
      "brand": "Saab",
      "modal": 2017,
    },
    null,
    undefined,
    Object {
      "brand": "Honda",
      "modal": 2019,
    },
  ],
  "user.name": "John",
}
`;

exports[`$setData Data with array, root, overwrite 1`] = `
Array [
  Object {
    "brand": "Volvo",
    "modal": 2920,
  },
  Object {
    "brand": "Saab",
    "modal": 2017,
  },
  null,
  undefined,
  Object {
    "brand": "Honda",
    "modal": 2019,
  },
]
`;

exports[`$setData Data with mongoDb $concat 1`] = `
Object {
  "cars.0.brand": "Volvo",
  "cars.0.modal": 2920,
  "cars.1.brand": "Saab",
  "cars.1.modal": 2017,
  "cars.2.brand": "Honda",
  "cars.2.modal": 2019,
  "cars.2.searchContent": Object {
    "$concat": Array [
      "$brand",
      " ",
      "$model",
    ],
  },
}
`;

exports[`$setData Null and undefined values 1`] = `
Object {
  "user.firstName": "John",
  "user.middleName": null,
  "user.phones.main": "+44000011112222",
}
`;

exports[`$setData Plain object 1`] = `
Object {
  "user.name": "John",
  "user.phones.main": "+44000011112222",
}
`;

exports[`$setData Plain object, overwrite object 1`] = `
Object {
  "user.name": "John",
  "user.phones": Object {
    "main": "+44000011112222",
  },
}
`;

exports[`$setData Plain object, root, overwrite object 1`] = `
Object {
  "user": Object {
    "name": "John",
    "phones": Object {
      "main": "+44000011112222",
    },
  },
}
`;

exports[`$setData Root property 1`] = `
Object {
  "name": "John",
  "phones.main": "+44000011112222",
}
`;
